--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MainActivity">
+        <activity android:name=".mainscreen.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,9 +17,9 @@
         </activity>
 
         <activity
-            android:name=".ReadActivity"
+            android:name=".details.ReadActivity"
             android:label=""
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".mainscreen.MainActivity" />
 
         <provider
             android:name=".data.NewsProvider"
@@ -27,12 +27,12 @@
             android:exported="false" />
 
         <activity
-            android:name=".SettingsActivity"
+            android:name=".settings.SettingsActivity"
             android:label="@string/settings"
             android:launchMode="singleTask" />
 
         <activity
-            android:name=".StatsActivity"
+            android:name=".stats.StatsActivity"
             android:label="@string/statistics"
             android:launchMode="singleTask" />
 
