--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+
 buildscript {
     repositories {
         jcenter()
@@ -15,6 +16,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+
+        // for DBFlow
+        maven { url "https://www.jitpack.io" }
     }
 }
 
